# mini-pinball-machine

./: .gitignore  BUILD_NOTES.md  CHIPMUNK_TO_BOX2D_MAPPING.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  MIGRATION_GUIDE.md  MIGRATION_NOTES.md  MIGRATION_SUMMARY.md  PHYSICS_FIX_SUMMARY.md  PICO_MIGRATION_GUIDE.md  README.md  readme_migration.md
3D Files/: Back.step  Camera Face.step  Floor.step  Front Face.step  Inner Wall Border.step  Inner Wall.step  LED Board Buffer.step  Matrix Board.step  Outer Wall.step  Screen Cover - Double Thick.step  Top.step
README/: IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  MODULARIZATION_REFACTOR.md  PARTS.md  PICO_FIRMWARE_SPEC.md  PICO_MIGRATION_GUIDE.md  REFACTOR_COMPLETE.md  REFACTOR_SUMMARY.md  readme_migration.md
firmware/: .gitignore  BUTTON_LED_EFFECTS.md  CMakeLists.txt  DIAGNOSTICS.md  HARDWARE_SETUP.md  IMPLEMENTATION_STATUS.md  README.md  build.sh  firmware.md
firmware/include/: buttons.h  controller_state.h  debug_mode.h  display.h  haptics.h  hardware_config.h  neopixel.h  onboard_neopixel.h  protocol.h  types.h
firmware/src/: buttons.c  controller_state.c  debug_mode.c  display.c  haptics.c  hw_button_leds.c  hw_button_leds.h  hw_buttons.c  hw_buttons.h  hw_display.c  hw_display.h  hw_haptics.c  hw_haptics.h  hw_neopixel.c  hw_neopixel.h  hw_serial.c  hw_serial.h  main.c  neopixel.c  onboard_neopixel.c  protocol.c  protocol.h  ws2812.pio
resources/assets/Shaders/glsl100/: water.fs
resources/assets/Shaders/glsl120/: water.fs
resources/assets/Shaders/glsl330/: water.fs
resources/assets/Textures/: menuOverlay1.afdesign  menuOverlay1.afdesign.af
src/: box2d_wrapper.cpp  box2d_wrapper.h  constants.c  constants.h  flippers.c  flippers.h  game.c  game.h  gameStruct.h  inputManager.h  inputManagerMac.c  inputManagerPi.c  main.c  main.c.backup  menu.c  menu.h  physics.c  physics.cpp  physics.h  physicsDebugDraw.c  physicsDebugDraw.cpp  physicsDebugDraw.h  powerups.c  powerups.h  render.c  render.h  resources.c  resources.h  soundManager.c  ui.c  ui.h  util.c  util.h  water.c  water.h
